<resources>
    <string name="app_name">CarBar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="musicText">🎶</string>
    <string name="textText">🗨️</string>
    <string name="mapText">🗺️</string>
    <string name="close_text">❌</string>
    <string name="minimize_text">➖</string>
    <string name="home_text">🏠</string>
    <string name="expandCarBar"><![CDATA[>]]></string>
    <string name="text_label">\"hello world\"</string>
</resources>